[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'star-planet-on-substrate-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.star-planet-on-substrate-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['star-planet-on-substrate-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
